fixed contrast on sort arrows. ie/edge alignment issue needs fixed

--- a/ValidationWeb/Content/Styles/validationportal.css
+++ b/ValidationWeb/Content/Styles/validationportal.css
@@ -4,13 +4,6 @@
     font-family: Calibri, Arial, sans-serif;
 }
 
-/*
-    Hyperlink: #0563c1; underline
-Hover: #196486; underline
-Focus: color: #003865; border-radius: 5px; background-color: #A4BCC2
-
-*/
-
 .mainSection a {
     color: #0563c1;
     text-decoration: underline;
@@ -88,13 +81,14 @@ div#notes {
     left: 50%;
     font-size: 50px;
     color: white;
-    transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
     width: 100%;
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
-    background-color: rgb(0, 56, 101, 0.9);
+    background-color: rgb(0, 56, 101);
+    background-color: rgba(0, 56, 101, 0.9);
     text-shadow: 0 0 1px #000, 0 0 1px #000, 0 0 1px #000; /* text outline */
 }
 
@@ -464,16 +458,6 @@ footer a:focus {
     border-radius: 5px;
     background-color: #A4BCC2;
 }
-
-.table-primary th {
-    border-color: #003865;
-}
-
-    .table-primary th:focus {
-        color: #003865;
-        /*border-radius: 5px;*/
-        background-color: #A4BCC2;
-    }
 
 .validation-dropdown-menu {
     /*padding-top: 0;
@@ -896,33 +880,104 @@ h3, .h3 {
     font-size: 1.2em;
 }
 
-table.dataTable thead .sorting :focus :before,
-table.dataTable thead .sorting :focus :after,
-table.dataTable thead .sorting_asc :focus :before,
-table.dataTable thead .sorting_asc :focus :after,
-table.dataTable thead .sorting_desc :focus :before,
-table.dataTable thead .sorting_desc :focus :after,
-table.dataTable thead .sorting_asc_disabled :focus :before,
-table.dataTable thead .sorting_asc_disabled :focus :after,
-table.dataTable thead .sorting_desc_disabled :focus :before,
-table.dataTable thead .sorting_desc_disabled :focus :after {
-    position: absolute;
-    bottom: 0.9em;
-    display: block;
-    font-size: 24px !important;
+
+table.dataTable thead .sorting::before,
+table.dataTable thead .sorting::after {
+    color: rgb(184, 218, 255);
     opacity: 1.0 !important;
-    color: white;
 }
 
-table.dataTable thead .sorting:before:focus,
-table.dataTable thead .sorting_asc:before:focus,
-table.dataTable thead .sorting_desc:before:focus,
-table.dataTable thead .sorting_asc_disabled:before:focus,
-table.dataTable thead .sorting_desc_disabled:before:focus {
-    right: 1em;
-    content: "\2191";
-    color: whitesmoke;
+table.dataTable thead th.sorting_asc::after,
+table.dataTable thead th.sorting_desc::before {
+    color: rgb(184, 218, 255);
 }
+
+table.dataTable thead .sorting::before,
+table.dataTable thead .sorting_asc::before,
+table.dataTable thead .sorting_desc::before {
+    right: 0.9em;
+    content: "\2191";
+    opacity: 1.0 !important;
+}
+
+table.dataTable thead .sorting::after,
+table.dataTable thead .sorting_asc::after,
+table.dataTable thead .sorting_desc::after {
+    right: 0.05em;
+    content: "\2193";
+    opacity: 1.0 !important;
+}
+
+table.dataTable thead th.sorting:focus {
+    color: #003865;
+}
+
+    table.dataTable thead th.sorting:focus::before {
+        color: #003865;
+    }
+
+    table.dataTable thead th.sorting:focus::after {
+        color: #003865;
+    }
+
+table.dataTable thead.table-primary th.sorting_asc:focus {
+    color: #003865;
+}
+
+    table.dataTable thead.table-primary th.sorting_asc:focus::after {
+        color: white;
+    }
+
+table.dataTable thead.table-primary th.sorting_desc:focus {
+    color: #003865;
+}
+
+    table.dataTable thead.table-primary th.sorting_desc:focus::before {
+        color: white;
+    }
+
+/*table.dataTable thead th.sorting_asc::after {
+    color: rgb(184, 218, 255);
+}
+
+table.dataTable thead th.sorting_desc::before {
+    color: rgb(184, 218, 255);
+}*/
+
+/*
+    table.dataTable thead :focus {
+    opacity: 1.0 !important;
+    border-color: greenyellow;
+}
+
+table.dataTable thead.sorting_asc :focus ::before {
+    color: rgb(0, 56, 101);
+}
+
+table.dataTable thead :focus {
+    color: orange; 
+opacity: 1 !important;
+}
+    table.dataTable thead.sorting :focus ::before {
+        color: blue;
+        opacity: 1 !important;
+    }
+    table.dataTable thead.sorting :focus ::after {
+        color: blue;
+        opacity: 1 !important;
+    }
+
+}*/
+
+
+.table-primary th {
+    border-color: #003865;
+}
+
+    .table-primary th:focus {
+        /*color: #003865;*/
+        background-color: #A4BCC2;
+    }
 
 .hidden {
     position: absolute;
